--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,66 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+ 
+}
+button {
+  padding: 10px 15px;
+  background-color: rgb(70, 153, 179);
   color: white;
+  border: 1px solid rgb(70, 153, 179);
+  background-color: 250ms;
 }
 
-.App-link {
-  color: #09d3ac;
+button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: rgb(70, 153, 179);
+}
+
+
+h1 {
+  text-align: center;
+}
+
+form {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+}
+label,
+input {
+  display: block;
+  width: 100%;
+}
+
+label {
+  margin-bottom: 5px;
+  height: 22px;
+}
+
+input {
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid #777;
+}
+.LoginCover {
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+}
+.Login {
+  top: 25%;
+  position: absolute;
+  left: 42%;
 }
